# Synthetic-Wideband-CSI-Sensing

./: channel_stitch.py  requirements.txt
channel-estimation/: esp_channel_estimator.py  ideal_channel_estimator.py
channel-estimation/CSI_Data/: csi_processed_ch1.npy  csi_processed_ch11.npy  csi_processed_ch13.npy  csi_processed_ch6.npy
csi-channel-hopping/channel-hopping/: CMakeLists.txt  build-all.sh
csi-channel-hopping/channel-hopping/main/: CMakeLists.txt  csi_rx_hopper.c  csi_tx_hopper.c
sca-demo/: sca-demo.py  sca-opt.py
